--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ author_email = 'zblumenf@gmail.com'
 license = 'MIT'
 
 [options]
-packages = find:
+install_requires = pandas
 test_suite=tests
 include_package_data = True
 python_requires = >=3.7
